--- a/game-of-life/assets/css/styles.css
+++ b/game-of-life/assets/css/styles.css
@@ -77,8 +77,18 @@ body .screen {
   align-items: center;
 }
 body .screen #canvas {
-  width: 800px;
-  height: 800px;
   background: #b4b4b4;
   box-shadow: 0px 0px 12px -5px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-wrap: wrap;
+}
+body .screen #canvas .cell {
+  border: 0.5px solid black;
+  background: #858585;
+}
+body .screen #canvas .cell:hover {
+  background: rgba(255, 217, 2, 0.5);
+}
+body .screen #canvas .alive {
+  background: yellow !important;
 }
