--- a/game-of-life/assets/scss/styles.scss
+++ b/game-of-life/assets/scss/styles.scss
@@ -94,10 +94,25 @@ body {
         align-items: center;
 
         #canvas {
-            width: $size;
-            height: $size;
+            // width: $size;
+            // height: $size;
             background: rgb(180, 180, 180);
             box-shadow: 0px 0px 12px -5px rgba(0, 0, 0, 0.5);
+            display: flex;
+            flex-wrap: wrap;
+
+            .cell {
+                border: 0.5px solid black;
+                background: #858585;
+            }
+
+            .cell:hover {
+                background: rgba(255, 217, 2, 0.5);
+            }
+
+            .alive {
+                background: yellow !important;
+            }
         }
     }
 
