--- a/game-of-life/assets/css/styles.css
+++ b/game-of-life/assets/css/styles.css
@@ -21,7 +21,14 @@ body .panel {
   box-shadow: 0px 0px 12px -5px rgba(0, 0, 0, 0.5);
 }
 body .panel h1 {
-  margin-bottom: 2em;
+  margin-bottom: 1em;
+}
+body .panel #step-holder {
+  margin-bottom: 1em;
+  font-size: 1.2em;
+}
+body .panel #step-holder span {
+  font-size: 1.5em;
 }
 body .panel .settings .setting {
   margin-bottom: 1em;
@@ -57,7 +64,13 @@ body .panel .settings .setting .controls .up {
 body .panel .settings .setting .controls .down {
   border-top: 8px solid red;
 }
-body .panel .settings #save {
+body .panel .settings .ctrl-buttons {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+body .panel .settings .ctrl-buttons .ctrls {
   cursor: pointer;
   padding: 0.5em;
   width: 10em;
@@ -66,8 +79,26 @@ body .panel .settings #save {
   margin-top: 1em;
   border-radius: 0;
 }
-body .panel .settings button:focus {
+body .panel .settings .ctrl-buttons .ctrls:focus {
   outline: none;
+}
+body .panel .settings .ctrl-buttons #resume {
+  display: none;
+  background: #008cff;
+  color: white;
+}
+body .panel .settings .ctrl-buttons #pause {
+  display: none;
+  background: yellow;
+}
+body .panel .settings .ctrl-buttons #stop {
+  display: none;
+  background: #ff4800;
+  color: white;
+}
+body .panel .settings .ctrl-buttons #clear {
+  background: #ff0077;
+  color: white;
 }
 body .screen {
   height: 100%;
