--- a/game-of-life/assets/scss/styles.scss
+++ b/game-of-life/assets/scss/styles.scss
@@ -11,6 +11,7 @@ body {
     display: flex;
 
     .panel {
+        position: relative;
         width: 400px;
         height: 100%;
         background: #151515;
@@ -116,6 +117,24 @@ body {
                     background: rgb(255, 0, 119);
                     color: white;
                 }
+            }
+        }
+
+        .special {
+            position: absolute;
+            bottom: 2em;
+            right: 2em;
+            left: 2em;
+
+            .special-key {
+                cursor: pointer;
+                padding: 0.5em;
+                width: 10em;
+                border: none;
+                background: rgb(47, 144, 255);
+                color: white;
+                margin-top: 1em;
+                border-radius: 0;
             }
         }
     }
